--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-	<title>Jonathan Dev portofolio</title>
+	<title>Jonathan Dev portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="Développeur Web -créateur de site web et API à Grasse dans les Alpes Maritimes" />
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Portofolio</a></h1>
+			<h1 id="logo"><a href="index.html">portfolio</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="cv.pdf" target="_blank">Mon CV</a></li>
@@ -48,7 +48,7 @@
 				<header>
 					<h2>Développeur <span id="app"></span></h2>
 					<h3>Jonathan Fernandez</h3>
-					<p>Bienvenue sur mon portofolio.</p>
+					<p>Bienvenue sur mon portfolio.</p>
 				</header>
 				<span class="image"><img src="images/photo-Jonathan.jpg" alt="Photo Jonathan" /></span>
 			</div>
