--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					class="label">GitHub</span></a></li>
 				</ul>
 			</div>
-			<a href="#three" class="goto-next scrolly">Next</a>
+			<a href="#three" class="goto-next-black scrolly">Next</a>
 		</section>
 
 		<!-- Three -->
@@ -147,7 +147,7 @@
 						class="label">GitHub</span></a></li>
 					</ul>
 			</div>
-			<a href="#four" class="goto-next scrolly">Next</a>
+			<a href="#four" class="goto-next-black scrolly">Next</a>
 		</section>
 
 		<!-- Four -->
@@ -178,7 +178,7 @@
 								class="label">GitHub</span></a></li>
 							</ul>
 					</div>
-					<a href="#five" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next-black scrolly">Next</a>
 		</section>
 
 		<!-- Five -->
@@ -201,7 +201,7 @@
 						au site</a></li>
 			</ul>
 	</div>	
-	<a href="#six" class="goto-next scrolly">Next</a>
+	<a href="#six" class="goto-next-black scrolly">Next</a>
 	</section>
 
 	<!-- Six -->
@@ -218,14 +218,14 @@
 				<li>Utilisation uniquement des langages HTML et CSS.</li>
 				<li>Utilisation de SASS le préprocesseur CSS.</li>
 				<li>Le site doit être responsive.</li>
-				<li>Les pages HTML et CSS ne doivent comporter aucune erreur au validateur W3C (HTLM et CSS).</li>
+				<li>Les pages HTML et CSS ne doivent comporter aucune erreur au validateur W3C (HTML et CSS).</li>
 			</ul>
 			<ul class="actions">
 				<li><a href="https://jonathandevcom.github.io/ohmyfood/index.html" target="_blank" class="button">Accès
 						au site</a></li>
 			</ul>
 		</div>
-		<a href="#seven" class="goto-next scrolly">Next</a>
+		<a href="#seven" class="goto-next-black scrolly">Next</a>
 	</section>
 
 	<!-- Seven -->
@@ -241,14 +241,14 @@
 				<li>Le CV doit être personnalisé mais conforme à un modèle fourni par OpenClassrooms.</li>
 				<li>Utilisation uniquement des langages HTML et CSS.</li>
 				<li>Le site doit être responsive.</li>
-				<li>Les pages HTML et CSS ne doivent comporter aucune erreur au validateur W3C (HTLM et CSS).</li>
+				<li>Les pages HTML et CSS ne doivent comporter aucune erreur au validateur W3C (HTML et CSS).</li>
 			</ul>
 			<ul class="actions">
 				<li><a href="https://jonathandevcom.github.io/cv_jonathan.github.io/" target="_blank"
 						class="button">Accès au site</a></li>
 			</ul>
 		</div>
-		<a href="#eight" class="goto-next scrolly">Next</a>
+		<a href="#eight" class="goto-next-black scrolly">Next</a>
 	</section>
 
 
